# conda-libmamba-solver

./: .authors.yml  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  HOW_WE_USE_GITHUB.md  LICENSE  README.md  RELEASE.md  _v2_changes_.md  pyproject.toml  setup.cfg
.devcontainer/: apt-deps.txt  apt_deps.sh  conda_deps.sh  devcontainer.json  docker-compose.yml  post_create.sh  post_start.sh
.devcontainer/conda-forge/: devcontainer.json
.devcontainer/defaults/: devcontainer.json
.devcontainer/network-simulator/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  TEST_FAILURE_REPORT_TEMPLATE.md  disclaimer.txt  labels.yml
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/template-files/: config.yml
.github/template-files/templates/: pull_request_template_details.md
.github/workflows/: all_tests.yml  build.yml  builds-canary.yaml  builds-review.yaml  ci.yml  docs.yml  labels.yml  lint-style.yml  manual-test.yaml  performance.yml  stale.yml  test-conda-main.yml  tests.yml  tests.yml.disabled-temp  update.yml  upstream_ci.yml  upstream_tests.yml
conda.recipe/: conda_build_config.yaml  meta.yaml
conda_libmamba_solver/: __init__.py  _index_v1.py  _libmamba.py  _solver_v1.py  conda_build_exceptions.py  conda_interface.py  exceptions.py  index.py  index2.py  libmamba.py  libmamba2.py  libmamba_utils.py  mamba_solver.py  mamba_utils.py  models.py  plugin.py  repoquery.py  shard_cache.py  shards.py  shards_cache.py  shards_subset.py  shards_subset_http2.py  shards_sync.py  shards_typing.py  solver.py  solver2.py  state.py  utils.py  zstd.py
dev/: bashrc_linux.sh  requirements.txt  upstream_unit_tests_linux.sh  upstream_unit_tests_macos.sh  upstream_unit_tests_win.bat
dev/collect_upstream_conda_tests/: collect_upstream_conda_tests.py  pyproject.toml
dev/linux/: bashrc.sh  upstream_integration.sh  upstream_unit.sh
dev/scripts/: BenchmarkChart.ipynb  example.xonshrc  fix_xonshrc.py  httpx-fetch-all-shards.py  requests-fetch-all-shards.py
docs/: README.md  conf.py  configuration.md  dev-future-work.md  dev-implementation.md  dev-setup.md  dev-workflows.md  environment.yml  faq.md  getting-started.md  index.md  libmamba-vs-classic.md  more-resources.md  performance.md  robots.txt  subcommands.md
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/_templates/: navbar_center.html
docs/dev/: future-work.md  how-we-use-github.md  implementation.md  index.md  performance-testing.md  profiling.md  setup.md  sharded.md  shards_python.mmd  workflows.md
docs/user-guide/: configuration.md  faq.md  index.md  libmamba-vs-classic.md  performance.md  subcommands.md
durations/: Linux.json  Windows.json  macOS.json
news/: 101-missing-pkgs  103-exception-parsing  106-ci-scheduled  10803-virtual-package-constrains  111-determinism  119-breaking-conda-internal-api  120-no-mamba-lockfiles  127-hatchling  133-conda-forge-ci  142-fix-140-indexedset-json  151-fix-subdirdata-boltons  157-fix-determinism-test  158-conda-update  159-pin-minio  165-libmamba-141  166-fix-recipe  170-min-conda-version  172-defaults-spec-errors  174-py38  183-test-user-agent  184-airgap-channels  191-feat-mamba-dev-testing  193-grouped-context  194-conda-build-local  197-solver-differences  200-repodata-threads  208-update-docs  209-mamba-ctx  210-remove-subdirdata-workarounds  222-disappearing-matchspecs  226-auth-downloads  234-conda-lock  248-url-decode  256-empty-index  257-infer-noarch  258-repoquery  266-defaults-150  267-prune  270-tasks-and-prune  274-ignore-unavailable-channels  (+107 more)
profiling/: Dockerfile  README.md  profile.py
recipe/: meta.yaml
tests/: __init__.py  _reposerver.py  channel_testing_utils.py  conftest.py  http_channel_helpers.py  http_test_server.py  httpx-fetch-all-shards.py  repodata_time_machine.py  requests-fetch-all-shards.py  requirements.txt  run_in_profiler.py  shard_cache.py  shard_fixtures.py  shards_sync.py  test_channels.py  test_conda_build.py  test_downstream.py  test_experimental.py  test_index.py  test_index2.py  test_mamba_utils.py  test_modified_upstream.py  test_performance.py  test_plugin.py  test_repoquery.py  test_shards.py  test_shards_subset.py  test_solver.py  test_solver_differences.py  test_solvers.py  test_state.py  test_user_agent.py  test_workarounds.py  testserver.sh  utils.py
tests/channel_testing/: helpers.py  reposerver.py
tests/data/: in_state.pickle  lock_this_env.yml  sharded_fetching_scenarios_basic.json
tests/data/conda_build_recipes/: LICENSE
tests/data/conda_build_recipes/jedi/: meta.yaml
tests/data/conda_build_recipes/stackvana/: meta.yaml
tests/data/mamba_repo/: LICENSE
tests/data/mamba_repo/noarch/: not-sharded-package-0.1-0.tar.bz2  repodata.json  repodata.json.bz2  repodata_from_packages.json  repodata_from_packages.json.bz2
tests/profiling/: test_shards.py  test_solver.py
