[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-libmamba-solver"
description = "The fast mamba solver, now in conda"
readme = "README.md"
authors = [
  {name = "Anaconda, Inc.", email = "conda@continuum.io"}
]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">=3.8"
dependencies = [
  "conda >=23.7.3",
  "libmambapy >=1.5.6",
  "boltons >=23.0.0",
]
dynamic = [
  "version"
]

[project.urls]
homepage = "https://github.com/conda/conda-libmamba-solver"

[project.entry-points.conda]
conda-libmamba-solver = "conda_libmamba_solver.plugin"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
(
      ^/conda_libmamba_solver/_libmamba\.py
    | ^/tests/_reposerver\.py
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--tb=native",
  "--strict-markers",
  "--xdoctest-modules",
  "--xdoctest-style=google",
  # "--reruns=3",
]

markers = [
  "integration: integration tests that usually require an internet connect",
  "slow: slow running tests",
]

[tool.isort]
profile = "black"
filter_files = true

[tool.ruff]
line-length = 99
