[metadata]
name = conda-libmamba-solver
version = 0.1.0
description = The fast mamba solver, now in conda
long_description = file: README.md
long_description_content_type = text/markdown
author = Anaconda, Inc.
author_email = conda@continuum.io
license = BSD
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    homepage = https://github.com/conda-incubator/conda-libmamba-solver

[options]
packages = find:
python_requires = >=3.6
