[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collect-upstream-conda-tests"
version = "0.0.1"
description = "A pytest plugin to filter which upstream tests are run"
authors = [
  {name = "Anaconda, Inc.", email = "conda@continuum.io"}
]
license = {file = "../../LICENSE"}
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">=3.8"
dependencies = [
  "pytest",
]

[project.urls]
homepage = "https://github.com/conda/conda-libmamba-solver"

[project.entry-points.pytest11]
collect-upstream-conda-tests = "collect_upstream_conda_tests"
